fix overflow in AddContactsModal

--- a/client/src/modules/detailedView/Organization/OrganizationSidebar/AllContactsModal/AllContactsModal.css
+++ b/client/src/modules/detailedView/Organization/OrganizationSidebar/AllContactsModal/AllContactsModal.css
@@ -21,5 +21,5 @@
 
 .tableWrapper {
   max-height: 60vh;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
